[package]
name = "arecibo"
version = "0.1.3"
edition = "2021"
default-run = "arecibo"

[dependencies]
anyhow = "1.0.95"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
axum = "0.8.1"
librqbit = { git = "https://github.com/ikatson/rqbit", branch = "main", features = [
    "disable-upload",
] }
dotenv = "0.15.0"
once_cell = "1.20.2"
regex = "1.11.1"
url = { version = "=2.5.2", default-features = false }
tower-http = { version = "0.6.2", features = [
    "compression-gzip",
    "compression-zstd",
] }
