[package]
name = "arecibo"
version = "0.1.3"
edition = "2021"
default-run = "arecibo"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
tracing = "0.1"
axum = "0.8"
librqbit = { version = "8.1", default-features = false, features = [
    "disable-upload",
    "rust-tls",
] }
url = { version = "=2.5", default-features = false }
tower-http = { version = "0.6", features = [
    "compression-gzip",
    "compression-zstd",
] }
zstd = "0.13.3"
thiserror = "2.0.16"
hex = "0.4.3"
bendy = { version = "0.4", features = ["serde"] }
sled = "0.34"
bincode = { version = "2", features = ["serde"] }
